// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnifiedSocialCreditCode > should parse 1`] = `
{
  "adminDivisionCode": "330106",
  "checkDigit": "P",
  "codes": [
    "9",
    "1",
    "330106",
    "673959654",
    "P",
  ],
  "entityCategoryCode": "1",
  "names": [
    "工商",
    "企业",
  ],
  "organizationCode": "673959654",
  "raw": "91330106673959654P",
  "registrationAuthorityCode": "9",
  "valid": true,
}
`;

exports[`UnifiedSocialCreditCode > should parse 2`] = `
{
  "adminDivisionCode": "330106",
  "checkDigit": "R",
  "codes": [
    "9",
    "1",
    "330106",
    "MA2CFLDG4",
    "R",
  ],
  "entityCategoryCode": "1",
  "names": [
    "工商",
    "企业",
  ],
  "organizationCode": "MA2CFLDG4",
  "raw": "91330106MA2CFLDG4R",
  "registrationAuthorityCode": "9",
  "valid": true,
}
`;

exports[`UnifiedSocialCreditCode > should parse 3`] = `
{
  "adminDivisionCode": "310120",
  "checkDigit": "0",
  "codes": [
    "9",
    "1",
    "310120",
    "MAEXK9GG9",
    "0",
  ],
  "entityCategoryCode": "1",
  "names": [
    "工商",
    "企业",
  ],
  "organizationCode": "MAEXK9GG9",
  "raw": "91310120MAEXK9GG90",
  "registrationAuthorityCode": "9",
  "valid": false,
}
`;
